--- a/public/css/page.css
+++ b/public/css/page.css
@@ -1,7 +1,6 @@
-body
-{
+body {
 
-    background-image: url("/pictures/4001.jpg");
+    background-image: url("/pictures/400100.png");
     /* Set a specific height */
     height: 30em;
     width: 100%;
@@ -15,62 +14,57 @@ body
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    background-blend-mode: multiply;
+    background-color: rgba(100, 100, 100, .91);
 
 }
 
-.site_name
-{
+.site_name {
     padding-left: 6rem;
 }
 
-.top
-{
+.top {
     width: 100%;
     background-color: #002752;
     padding-top: 5px;
 }
-.link-home
-{
+
+.link-home {
     color: antiquewhite;
 }
 
-.site_p_name
-{
+.site_p_name {
     margin-left: 0;
     padding-left: 0;
 
 }
 
-.site_pre_name
-{
+.site_pre_name {
     font-size: x-large;
     color: antiquewhite;
 }
 
-.site_post_name
-{
-     color: antiquewhite;
+.site_post_name {
+    color: antiquewhite;
 }
-.col-xs-11
-{
+
+.col-xs-11 {
     margin-left: 10px;
 
-
 }
-.nav-item
-{
+
+.nav-item {
     padding-right: 2rem;
+
 }
 
-
-.index-center
-{   padding-top: 3rem;
+.index-center {
+    padding-top: 3rem;
     padding-left: 5rem;
     text-align: center;
 }
 
-
- .parallax {
+.parallax {
     /* !* The image used *!
      background-image: url("/pictures/4001.jpg");
 
@@ -89,11 +83,11 @@ body
      background-repeat: no-repeat;
      background-size: cover;
     */
-     margin-top: 3em;
-     height: 50em;
- }
-.details
-{
+    margin-top: 3em;
+    height: 50em;
+}
+
+.details {
     font-size: x-large;
     margin-left: 20rem;
     width: 34em;
@@ -101,44 +95,49 @@ body
 
 }
 
-hr{
+hr {
     border-color: red;
 
 }
 
-#dmishra
-{
+#dmishra {
     text-align: center;
 }
 
 a:link {
     color: greenyellow;
     font: bold;
-    font-size: larger ;
+
 }
 
-.move
-{
+.move {
     padding-left: 40px;
 }
 
-.buttons-down
-{
+.buttons-down {
     color: antiquewhite;
 
 }
 
-.buttons-downn
-{ margin-bottom: 1em;
+.buttons-downn {
+    margin-bottom: 1em;
     margin-left: 5em;
     width: 30rem;
 }
 
-.padding-top
-{
+.padding-top {
     padding-top: 3em;
 }
-.courses
-{
+
+.courses {
     font-size: larger;
+}
+
+.footer {
+    position: relative;
+
+    bottom: 1em;
+    width: 100%;
+    height: 60px; /* Height of the footer */
+    background: #6cf;
 }
