--- a/public/css/page.css
+++ b/public/css/page.css
@@ -122,7 +122,7 @@ a:link {
 .buttons-downn {
     margin-bottom: 1em;
     margin-left: 5em;
-    width: 30rem;
+    width: 24rem;
 }
 
 .padding-top {
@@ -140,4 +140,8 @@ a:link {
     width: 100%;
     height: 60px; /* Height of the footer */
     background: #6cf;
+}
+.font
+{
+    text-align: left;
 }
