--- a/public/css/webpage.css
+++ b/public/css/webpage.css
@@ -6,11 +6,11 @@ body {
     text-align: center;
     background-position: center;
     background-color: whitesmoke;
-
+    margin-bottom: 10rem ;
 }
 
 .site_name {
-    padding-left: 6rem;
+
 }
 
 .top {
@@ -26,8 +26,14 @@ body {
 .site_p_name {
     margin-left: 0;
     padding-left: 0;
-
 }
+.site_p_name a
+{
+    color: #FFFFFF;
+    text-decoration: none;
+    float: left;
+}
+
 
 .site_pre_name {
     font-size: x-large;
@@ -90,7 +96,7 @@ hr {
 .buttons-downn {
     margin-bottom: 1em;
     margin-left: 5em;
-    width: 24rem;
+    width: 14rem;
 }
 
 
@@ -104,7 +110,6 @@ hr {
 
 .footer {
     position: relative;
-
     bottom: 1em;
     width: 100%;
     height: 60px; /* Height of the footer */
@@ -116,10 +121,21 @@ hr {
 }
 a:link {
     color: dodgerblue;
-
 }
 
 a:hover {
     color: orangered;
+}
 
+.btn-background:hover
+{
+    background-color:#dc3545;
+    border-color: #dc3545;
+}
+.buttoncontainer
+{
+    margin-bottom: 3em;
+}
+
+{
 }
